--- a/InfopasazerApp/App.xaml
+++ b/InfopasazerApp/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application
-    x:Class="Infopasazer.App"
+    x:Class="InfopasazerApp.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Infopasazer">
+    xmlns:local="using:InfopasazerApp"
+    RequestedTheme="Light">
 
 </Application>
