--- a/InfopasazerApp/MainPage.xaml
+++ b/InfopasazerApp/MainPage.xaml
@@ -7,7 +7,10 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid>
+        <Grid.Background>
+            <ImageBrush ImageSource="Assets/Background.jpg" Stretch="UniformToFill"></ImageBrush>
+        </Grid.Background>
         <StackPanel>
             <TextBlock x:Name="currentCityTextBlock" HorizontalAlignment="Center" TextAlignment="Center" FontSize="40" TextWrapping="Wrap" VerticalAlignment="Top" Height="100" Width="200"/>
             <Button x:Name="refreshCity" Content="Odśwież lokalizację" HorizontalAlignment="Center" VerticalAlignment="Top" Click="refreshCity_Click"/>
@@ -15,7 +18,16 @@
                 <Button x:Name="showStations" Content="Pokaż stacje w mieście" HorizontalAlignment="Left" VerticalAlignment="Top" Click="showStations_Click"/>
                 <TextBox x:Name="textBox" HorizontalAlignment="Left" TextWrapping="Wrap" Width ="200"  Text="Warszawa" VerticalAlignment="Top"/>
             </StackPanel>
-            <ListView x:Name="stationsListView" HorizontalAlignment="Center" Height="500" VerticalAlignment="Top" Width="300" IsItemClickEnabled="True" ItemClick="stationsListView_OnItemClick"/>
+            <ListView x:Name="stationsListView" HorizontalAlignment="Center" Height="500" VerticalAlignment="Top" Width="300" IsItemClickEnabled="True" ItemClick="stationsListView_OnItemClick">
+                <ListView.Background>
+                    <SolidColorBrush Color="Black" Opacity="0.25"/>
+                </ListView.Background>
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Setter Property="Foreground" Value="White"></Setter>
+                    </Style>
+                </ListView.ItemContainerStyle>
+            </ListView>
         </StackPanel>
         
 
