--- a/InfopasazerApp/StationPage.xaml
+++ b/InfopasazerApp/StationPage.xaml
@@ -2,7 +2,6 @@
     x:Class="InfopasazerApp.StationPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:InfopasazerApp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -105,19 +104,19 @@
 
                             </Grid.ColumnDefinitions>
                             <Border Grid.Column="0" BorderThickness="1 1 1 1" BorderBrush="White">
-                                <TextBlock Text="{Binding Name}" TextWrapping="Wrap"></TextBlock>
+                                <TextBlock Text="{Binding Name}" TextWrapping="Wrap" Tapped="Name_OnTapped" Foreground="LightSkyBlue" FontStyle="Italic"></TextBlock>
                             </Border>
                             <Border Grid.Column="1" BorderThickness="1 1 1 1" BorderBrush="White">
-                                <TextBlock Text="{Binding Company}" TextWrapping="Wrap"></TextBlock>
+                                <TextBlock Text="{Binding Company}" TextWrapping="Wrap" Tapped="Company_OnTapped" Foreground="LightSkyBlue" FontStyle="Italic"></TextBlock>
                             </Border>
                             <Border Grid.Column="2" BorderThickness="1 1 1 1" BorderBrush="White">
                                 <TextBlock Text="{Binding Date}" TextWrapping="Wrap"></TextBlock>
                             </Border>
                             <Border Grid.Column="3" BorderThickness="1 1 1 1" BorderBrush="White">
-                                <TextBlock Text="{Binding Source}" TextWrapping="Wrap" Tapped="Source_OnTapped"></TextBlock>
+                                <TextBlock Text="{Binding Source}" TextWrapping="Wrap" Tapped="Source_OnTapped" Foreground="LightSkyBlue" FontStyle="Italic"></TextBlock>
                             </Border>
                             <Border Grid.Column="4" BorderThickness="1 1 1 1" BorderBrush="White">
-                                <TextBlock Text="{Binding Destination}" TextWrapping="Wrap"></TextBlock>
+                                <TextBlock Text="{Binding Destination}" TextWrapping="Wrap" Tapped="Destination_OnTapped" Foreground="LightSkyBlue" FontStyle="Italic"></TextBlock>
                             </Border>
                             <Border Grid.Column="5" BorderThickness="1 1 1 1" BorderBrush="White">
                                 <TextBlock Text="{Binding PlannedTime}" TextWrapping="Wrap"></TextBlock>
