--- a/InfopasazerApp/StationPage.xaml
+++ b/InfopasazerApp/StationPage.xaml
@@ -6,13 +6,11 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-
     <Grid>
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
-
             </Grid.RowDefinitions>
             <Grid Grid.Row="0">
                 <Grid.Background>
@@ -22,7 +20,6 @@
                     <ColumnDefinition Width="*"></ColumnDefinition>
                     <ColumnDefinition Width="*"></ColumnDefinition>
                     <ColumnDefinition Width="*"></ColumnDefinition>
-
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Column="1" Foreground="White" x:Name="stationNameTextBlock" HorizontalAlignment="Center" TextAlignment="Center" TextWrapping="Wrap" Text="Brak stacji" FontSize="40"/>
                     <Button Grid.Column="2" x:Name="Mode" Content="Przyjazdy" Click="Mode_Click" Foreground="White" BorderBrush="White"/>
@@ -34,7 +31,6 @@
                 <ListView.ItemContainerStyle>
                     <Style TargetType="ListViewItem">
                         <Setter Property="HorizontalAlignment" Value="Stretch" />
-
                         <Setter Property="HorizontalContentAlignment" Value="Stretch" />
                         <Setter Property="VerticalContentAlignment" Value="Stretch" />
                         <Setter Property="Template">
@@ -61,7 +57,6 @@
                                 <ColumnDefinition Width="*"></ColumnDefinition>
                                 <ColumnDefinition Width="*"></ColumnDefinition>
                                 <ColumnDefinition Width="*"></ColumnDefinition>
-
                             </Grid.ColumnDefinitions>
                             <Border Grid.Column="0" BorderThickness="1 1 1 1" BorderBrush="White">
                                 <TextBlock TextWrapping="Wrap"><Bold>Nazwa</Bold></TextBlock>
@@ -73,7 +68,7 @@
                                 <TextBlock TextWrapping="Wrap"><Bold>Data</Bold></TextBlock>
                             </Border>
                             <Border Grid.Column="3" BorderThickness="1 1 1 1" BorderBrush="White">
-                                <TextBlock TextWrapping="Wrap" Tapped="Source_OnTapped"><Bold>Stacja Początkowa</Bold></TextBlock>
+                                <TextBlock TextWrapping="Wrap"><Bold>Stacja Początkowa</Bold></TextBlock>
                             </Border>
                             <Border Grid.Column="4" BorderThickness="1 1 1 1" BorderBrush="White">
                                 <TextBlock TextWrapping="Wrap"><Bold>Stacja Końcowa</Bold></TextBlock>
@@ -101,7 +96,6 @@
                                 <ColumnDefinition Width="*"></ColumnDefinition>
                                 <ColumnDefinition Width="*"></ColumnDefinition>
                                 <ColumnDefinition Width="*"></ColumnDefinition>
-
                             </Grid.ColumnDefinitions>
                             <Border Grid.Column="0" BorderThickness="1 1 1 1" BorderBrush="White">
                                 <TextBlock Text="{Binding Name}" TextWrapping="Wrap" Tapped="Name_OnTapped" Foreground="LightSkyBlue" FontStyle="Italic"></TextBlock>
